# ProyectoMLOps

./: .gitignore  README.md  mlruns.db  pyproject.toml
mlruns/5/de754150c01548e6a19654df10acaed2/artifacts/: feature_importance_weight.json
mlruns/6/0345b5fe999f48a4b1fb6eac2b523f25/artifacts/: feature_importance_weight.json
mlruns/6/03675632844048018df57fd9983a1ccb/artifacts/: feature_importance_weight.json
mlruns/6/1da7fd10c8f848eea22eeccf519f5fcd/artifacts/: feature_importance_weight.json
mlruns/6/1f03857e8cfa43209fadf898b57814f4/artifacts/: feature_importance_weight.json
mlruns/6/229732e9b38a4959a5d0ad9b8b4f97f4/artifacts/: feature_importance_weight.json
mlruns/6/2ca03361858b4c1baca2a645a904b2ce/artifacts/: feature_importance_weight.json
mlruns/6/31e9150a4c114fb99dd7be2b7552a6c5/artifacts/: feature_importance_weight.json
mlruns/6/3923cf6d3e0e4de4ab59721aa0ef2c34/artifacts/: feature_importance_weight.json
mlruns/6/3c54428e8d7b481eb1f9799b671cbfd0/artifacts/: feature_importance_weight.json
mlruns/6/54d8156037554562ad64c0b27d47ddd1/artifacts/: feature_importance_weight.json
mlruns/6/5f30df6c50ba46cfa1838c18057b56e1/artifacts/: feature_importance_weight.json
mlruns/6/67c5d8dcdeb541d0946ef20b95ddb568/artifacts/: feature_importance_weight.json
mlruns/6/74e6564fb893413d9fb0533b29b743a4/artifacts/: feature_importance_weight.json
notebooks/: 01_EDA.ipynb
src/app/test/: README.md  predict_api.py  pyproject.toml  test_api.py
src/app/train/: README.md  backend.db  ingesta.ipynb  load_data.py  mlflow.db  prefect_run_id.txt
(+113 files in other folders)
