[project]
name = "Adult-prediction-service"
version = "0.1.0"
description = "Entregable modelo aprendizaje en Nube"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.3.0",
    "gunicorn>=23.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "requests>=2.28.0",
    "scikit-learn>=1.1.0",
    "xgboost>=3.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]
production = [
    "gunicorn>=20.1.0",
]